# gen/openapiv2/headscale/v1/headscale.swagger.json
@@ -420,6 +420,45 @@
         ]
       }
     },
+    "/api/v1/node/{nodeId}/ip": {
+      "post": {
+        "operationId": "HeadscaleService_SetNodeIP",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1SetNodeIPResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "nodeId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/HeadscaleServiceSetNodeIPBody"
+            }
+          }
+        ],
+        "tags": [
+          "HeadscaleService"
+        ]
+      }
+    },
     "/api/v1/node/{nodeId}/rename/{newName}": {
       "post": {
         "operationId": "HeadscaleService_RenameNode",
@@ -843,6 +882,19 @@
           "items": {
             "type": "string"
           }
+        }
+      }
+    },
+    "HeadscaleServiceSetNodeIPBody": {
+      "type": "object",
+      "properties": {
+        "ipv4": {
+          "type": "string",
+          "title": "IPv4 address (required)"
+        },
+        "ipv6": {
+          "type": "string",
+          "title": "IPv6 address (optional, will be auto-generated if not provided)"
         }
       }
     },
@@ -1313,6 +1365,14 @@
       }
     },
     "v1SetApprovedRoutesResponse": {
+      "type": "object",
+      "properties": {
+        "node": {
+          "$ref": "#/definitions/v1Node"
+        }
+      }
+    },
+    "v1SetNodeIPResponse": {
       "type": "object",
       "properties": {
         "node": {
